<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginHorizontal="@dimen/space_xs"
    android:layout_marginTop="@dimen/space_m"
    android:gravity="center"
    android:layout_height="@dimen/horizontal_bar_height">


    <!-- Abs -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_abs"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/abs_card" />

    <!-- Back -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_back"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/back_card" />

    <!-- Biceps -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_biceps"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/biceps_card" />

    <!-- Calves -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_calves"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/calves_card" />

    <!-- Chest -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_chest"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/chest_card" />

    <!-- Forearms -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_forearms"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/forearms_card" />

    <!-- Glutes -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_glutes"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/glutes_card" />

    <!-- Hamstrings -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_hamstrings"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/hamstrings_card" />

    <!-- Lats -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_lats"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/lats_card" />

    <!-- Quads -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_quads"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/quads_card" />

    <!-- Shoulders -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_shoulder"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/shoulder_card" />

    <!-- Traps -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_traps"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/traps_card" />

    <!-- Triceps -->
    <TextView
        android:layout_width="25dp"
        android:layout_height="match_parent"
        android:text="@string/muscle_triceps"
        android:textSize="@dimen/text_xsmall"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/triceps_card" />


</LinearLayout>