<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/space_m"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_abs"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_abs"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_back"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_back"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_biceps"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_biceps"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_calves"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_calves"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_chest"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_chest"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_forearms"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_forearms"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_glutes"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_glutes"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_hamstrings"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_hamstrings"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_lats"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_lats"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_quads"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_quads"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_shoulders"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_shoulder"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_traps"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_traps"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/space_m"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="10dp"
                android:background="@drawable/background_label_triceps"
                android:layout_margin="@dimen/space_xs"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/muscle_triceps"
                android:textSize="@dimen/text_small"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>