<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:elevation="@dimen/space_m"
    android:layout_alignParentBottom="true"
    android:layout_margin="@dimen/space_m"
    android:background="@drawable/calendar_btn_back"
    android:layout_height="wrap_content">
    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:paddingHorizontal="@dimen/space_m"
        android:paddingVertical="@dimen/space_xs"
        android:textSize="@dimen/text_large"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:text="Add Set" />


    <GridLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="@dimen/space_xs"
        android:layout_columnWeight="1"
        android:rowCount="1"
        android:columnCount="2"
        >
        <LinearLayout
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:textSize="@dimen/text_medium"
                android:padding="@dimen/space_xs"
                android:layout_columnWeight="2"
                android:text="@string/set_recorder_weight_text"
                android:layout_width="match_parent"
                 android:layout_height="match_parent"/>

            <EditText
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/space_xs"
                android:id="@+id/ET_SET_ADDER_DIALOG_WEIGHT"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:background="#00000000"
                android:textSize="@dimen/text_large"
                android:layout_columnWeight="1"
                android:hint="@string/set_recorder_enter_weight_hint"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_column="1"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:textSize="@dimen/text_medium"
                android:padding="@dimen/space_xs"

                android:layout_columnWeight="2"
                android:text="@string/set_recorder_reps_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:padding="@dimen/space_xs"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/ET_SET_ADDER_DIALOG_REPS"
                android:background="#00000000"
                android:textSize="@dimen/text_large"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:hint="@string/set_recorder_enter_reps_hint"
                />
        </LinearLayout>

    </GridLayout>
    <TextView
        android:layout_row="3"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:gravity="center"
        android:background="@drawable/add_btn"
        android:id="@+id/TV_SET_ADDER_DIALOG_SUBMIT_BTN"
        android:textSize="@dimen/text_large"
        android:padding="@dimen/space_xs"
        android:layout_margin="@dimen/space_s"
        android:layout_columnSpan="2"
        android:text="@string/set_recorder_add_text" />

</GridLayout>